--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <p align="left"> <img src="https://komarev.com/ghpvc/?username=salman60mahmud&label=Profile%20views&color=0e75b6&style=flat"
         alt="salman60mahmud" /> </p>
 
-- 🌱 I’m currently learning *React, Node, Express, MongoDB etc.*
+- 🌱 I’m currently learning *React, Node, Express, MongoDB etc.* <br><br>
 
-- 💬Ask me about *MERN Stack Development*
+- 💬Ask me about *MERN Stack Development* <br> <br>
 
-- 📫 How to reach me *salman196199@gmail.com*
+- 📫 How to reach me *salman196199@gmail.com* <br><br>
 
 - ⚡ Fun fact *I think I am funny😊*
 
 <h3 align="left">Connect with me:</h3>
 <p align="left">
     <a href="https://www.facebook.com/salman.mahmud.946" target="blank"><img align="center"
-            src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg"
+            src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg"
             alt="salman.mahmud.946" height="30" width="40" /></a>
     <a href="https://www.instagram.com/salmanmahmud60/" target="blank"><img align="center"
             src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg"
