--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1 align="center">Hi 👋, I'm Salman</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Github</title>
+</head>
+<body>
+    <h1 align="center">Hi 👋, I'm Salman</h1>
 <h3 align="center">A Passionate MERN Stack Developer from Bangladesh</h3>
 
 <img align="right" alt="coding" width="400" src="images/68747470733a2f2f696d616765732e73717561726573706163652d63646e2e636f6d2f636f6e74656e742f76312f3537363966633430316236333162616231616464623261622f313534313538303631313632342d5445363451474b524a4738535741495553374e532f6b6.gif">
@@ -27,3 +35,5 @@
 <p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=salman60mahmud&show_icons=true&locale=en" alt="salman60mahmud" /></p>
 
 <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=salman60mahmud&" alt="salman60mahmud" /></p>
+</body>
+</html>
